Numerous ordered dither colour choice and algorithm fixes.

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -66,7 +66,6 @@ character_dither=Character Dither
 #Advanced Tab
 adv_serpentine=Serpentine Error Diffusion
 adv_constrain_diffusion=Constrain Error Diffusion To Attribute
-adv_dither_intensity=Ordered Dither Intensity
 adv_prefer_detail=Prefer Detail To Colour Accuracy
 adv_scr_hsb_order=GigaScreen SCR Export Attribute Order 
 adv_video_import_engine=Video Import Engine
@@ -75,6 +74,11 @@ adv_video_vlc_fail=Unable to load VLC library. Make sure that you have specified
 adv_video_vlc_success_title=VLC Loaded
 adv_video_vlc_success=The VLC library has been found and loaded!\nWarning this option is experimental and uses temporary files whilst working.\nIf you have problems switch back to JMF.						
 adv_video_turbo=Turbo Mode (recommended off)
+adv_colour_diff_euclidean= Euclidean Comparison
+adv_colour_diff_compuphase=Compuphase Comparison
+adv_colour_diff_classic=Classic Comparison
+adv_colour_diff=Colour Difference Algorithm
+
 
 #Misc Tab
 misc_tap_loader=Tape/Slideshow/Video Loader
