--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -74,10 +74,10 @@ adv_video_vlc_fail=Unable to load VLC library. Make sure that you have specified
 adv_video_vlc_success_title=VLC Loaded
 adv_video_vlc_success=The VLC library has been found and loaded!\nWarning this option is experimental and uses temporary files whilst working.\nIf you have problems switch back to JMF.						
 adv_video_turbo=Turbo Mode (recommended off)
-adv_colour_diff_euclidean= Euclidean Comparison
-adv_colour_diff_compuphase=Compuphase Comparison
-adv_colour_diff_classic=Classic Comparison
-adv_colour_diff=Colour Difference Algorithm
+adv_colour_dist_euclidean= Euclidean Comparison
+adv_colour_dist_compuphase=Compuphase Comparison
+adv_colour_dist_classic=Classic Comparison
+adv_colour_dist=Colour Distance Algorithm
 
 
 #Misc Tab
