--- a/doc/changes.txt
+++ b/doc/changes.txt
@@ -1,6 +1,12 @@
 Image to ZX Spec Changes
 ------------------------
 
+Version 2.1.0
+- Fixed Gigascreen palette choice bug in converter
+- Improved/added new colour distance algorithms (used to determine which palette colour should be used)
+- Fixed Ordered Dither algorithm
+- Removed broken incompatible ordered dither strategies (e.g. "Lightness")
+
 Version 2.0.2
 - Fixed related bugs to do with output image naming and missing output images
 - Updated copyright
