--- a/doc/changes.txt
+++ b/doc/changes.txt
@@ -2,15 +2,17 @@ Image to ZX Spec Changes
 ------------------------
 
 Version 2.1.0
-- Fixed Gigascreen palette choice bug in converter
-- Improved/added new colour distance algorithms (used to determine which palette colour should be used)
-- Fixed Ordered Dither algorithm
-- Removed broken incompatible ordered dither strategies (e.g. "Lightness")
+- Fixed Gigascreen palette choice bug in converter.
+- Improved/added new colour distance algorithms (used to determine which palette colour should be used).
+- Fixed Ordered Dither algorithm.
+- Removed incompatible ordered dither strategies (e.g. "Lightness").
+- Removed advanced "Prefer detail" option due to significantly poorer image conversion depending on algorithm.
+- Removed legacy info in documentation
 
 Version 2.0.2
-- Fixed related bugs to do with output image naming and missing output images
-- Updated copyright
-- Minor code clean up
+- Fixed related bugs to do with output image naming and missing output images.
+- Updated copyright.
+- Minor code clean up.
 
 Version 2.0.1
 - Fixed bug with main window extending off screen
