Commit of broken WIP

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -102,6 +102,8 @@ loader_simple=Simple (flickers, images and anims, not GigaScreen)
 loader_buffered=Buffered USR 0 (128K, images and anims, not GigaScreen)
 loader_gigascreen=GigaScreen USR 0 (128K, images only, GigaScreen)
 loader_custom=Custom
+scaling_default=256x192
+scaling_interlace=256x384
 scaling_none=None
 scaling_width_prop=Width Proportional 256x192
 scaling_height_prop=Height Proportional 256x192
