--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -65,7 +65,7 @@ character_dither=Character Dither
 
 #Advanced Tab
 adv_serpentine=Serpentine Error Diffusion
-adv_constrain_diffusion=Constrain Error Diffusion To Attribute
+adv_constrain_diffusion=Constrain Error Diffusion to Attribute
 adv_scr_hsb_order=GigaScreen SCR Export Attribute Order 
 adv_video_import_engine=Video Import Engine
 adv_video_vlc_fail_title=Unable to load VLC
@@ -77,6 +77,7 @@ adv_colour_dist_euclidean= Euclidean Comparison
 adv_colour_dist_compuphase=Compuphase Comparison
 adv_colour_dist_classic=Classic Comparison
 adv_colour_dist=Colour Distance Algorithm
+adv_colourspace_averaging=Colourspace Averaging for Interlacing
 
 
 #Misc Tab
@@ -103,7 +104,7 @@ loader_buffered=Buffered USR 0 (128K, images and anims, not GigaScreen)
 loader_gigascreen=GigaScreen USR 0 (128K, images only, GigaScreen)
 loader_custom=Custom
 scaling_default=256x192
-scaling_interlace=256x384
+scaling_interlace=256x384 (Gigascreen Interlaced)
 scaling_none=None
 scaling_width_prop=Width Proportional 256x192
 scaling_height_prop=Height Proportional 256x192
