--- a/doc/changes.txt
+++ b/doc/changes.txt
@@ -1,13 +1,21 @@
 Image to ZX Spec Changes
 ------------------------
 
+Version 2.2.0
+- Added interlaced 256x384 (Gigascreen palette shared high resolution).
+- Added interlaced screen colour averaging options.
+- Small fixes to SCR output.
+- Code improvements to Gigascreen processing.
+- Preview labelling improvements.
+- Updated copyright date.
+
 Version 2.1.0
 - Fixed Gigascreen palette choice bug in converter.
 - Improved/added new colour distance algorithms (used to determine which palette colour should be used).
 - Fixed Ordered Dither algorithm.
 - Removed incompatible ordered dither strategies (e.g. "Lightness").
 - Removed advanced "Prefer detail" option due to significantly poorer image conversion depending on algorithm.
-- Removed legacy info in documentation
+- Removed legacy info in documentation.
 
 Version 2.0.2
 - Fixed related bugs to do with output image naming and missing output images.
