Updated dependencies and fixed an error message

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -71,7 +71,7 @@ adv_video_import_engine=Video Import Engine
 adv_video_vlc_fail_title=Unable to load VLC
 adv_video_vlc_fail=Unable to load VLC library. Make sure that you have specified the correct VLC directory,\n that it is the same architecture as the version of Java (i.e. 32 or 64 bit), and that VLC is\n up to date.
 adv_video_vlc_success_title=VLC Loaded
-adv_video_vlc_success=The VLC library has been found and loaded!\nWarning this option is experimental and uses temporary files whilst working.\nIf you have problems switch back to JMF.						
+adv_video_vlc_success=The VLC library has been found and loaded!\nWarning this option is experimental and uses temporary files whilst working.\nIf you have problems switch back to Humble Video.						
 adv_video_turbo=Turbo Mode (recommended off)
 adv_colour_dist_euclidean= Euclidean Comparison
 adv_colour_dist_compuphase=Compuphase Comparison
