--- a/doc/changes.txt
+++ b/doc/changes.txt
@@ -1,7 +1,13 @@
 Image to ZX Spec Changes
 ------------------------
 
-Version 2.2.0
+Version 2.2.1
+- Improved interlaced 256x384 output (fewer bad palette choices).
+- Removed interlaced screen colour averaging options.
+- Re-enabled broken Gigascreen palette caching (significant conversion speed increase).
+- Code cleanups.
+
+Version 2.2.0 (beta only)
 - Added interlaced 256x384 (Gigascreen palette shared high resolution).
 - Added interlaced screen colour averaging options.
 - Small fixes to SCR output.
