Added luminance option for closest colour strategy which is now default as it generally seems to be the best. Also made minor update to Gigascreen SCR luminance export to use some shared variables.

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -76,6 +76,7 @@ adv_video_turbo=Turbo Mode (recommended off)
 adv_colour_dist_euclidean= Euclidean Comparison
 adv_colour_dist_compuphase=Compuphase Comparison
 adv_colour_dist_classic=Classic Comparison
+adv_colour_dist_luminance=Luminance Comparison
 adv_colour_dist=Colour Distance Algorithm
 
 #Misc Tab
